--- a/index.html
+++ b/index.html
@@ -5,13 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
+    <link rel="shortcut icon" href=# type="image/x-icon">
 </head>
 <body>
     <header>
-        <h1>Team Template</h1>
+        <nav> 
+            <img src="img/figma-logo.png" alt="figma-logo" width="80" height="60">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Product</a></li>
+                <li><a href="#">Prising</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </nav>
+        <a href="#"><img src="img/twitter.png" alt="twitter" width="25" height="25"></a>
+        <a href="#"><img src="img/instagram.jpg" alt="instagram" width="25" height="25"></a>
+        <a href="#"><img src="img/fb.jpg" alt="facebook" width="25" height="25"></a>
+        <h1>The best products start with Figma</h1>
+        <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
+        <button>Try For Free</button>
     </header>
     <main>
+        <section>
+            <h2>Features</h2>
+            <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
+            <figure>
+                <img src="img/forms.jpg" alt="forms">
+                <h3>OpenType features<br>Variable fonts</h3>
+                <p>Slate helps you see how many more days you need to work to reach your financial goal</p>
+            </figure>
+            <figure>
+                <img src="img/pen.png" alt="pen">
+                <h3>Design with real data</h3>
+                <p>Slate helps you see how many more days you need to work to reach your financial goal</p>
+            </figure>
+            <figure>
+                <img src="img//brush.jpg" alt="brush">
+                <h3>Fastest way to take action</h3>
+                <p>Slate helps you see how many more days you need to work to reach your financial goal</p>
+            </figure>
+        </section>
 
     </main>
     <footer>
