--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="img/figma-icon.svg" />
     <title>Document</title>
     <link rel="shortcut icon" href=# type="image/x-icon">
 </head>
@@ -27,7 +28,7 @@
         <button>Try For Free</button>
     </header>
     <main>
-        <section>
+        <section class="features">
             <h2>Features</h2>
             <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
             <figure>
@@ -46,10 +47,327 @@
                 <p>Slate helps you see how many more days you need to work to reach your financial goal</p>
             </figure>
         </section>
+        <section class="video">
+            <figure>
+            <img src="img/video-pic.jpg" alt="video">
+            </figure>
+        </section>
+        <section class="section organize">
+            <div class="organize__wrap">
+              <h3 class="organize__title">Fastest way to organize</h3>
+              <p class="organize__undertitle">
+                Most calendars are designed for teams. Slate is designed for freelancers
+              </p>
+              <button class="organize__button" type="button">Try For Free</button>
+            </div>
+            <img src="img/laptop.jpg" alt="laptop" class="organize__image" />
+          </section>
+          <section>
+            <img src="img/man-with-email.png" alt="emails" />
+            <div>
+              <p>At your fingertips</p>
+              <h3>Lightning fast prototyping</h3>
+              <p>Subscribe to our Newsletter</p>
+              <p>Available exclusively on Figmaland</p>
+              <form>
+                <input type="email" placeholder="Your Email" required />
+                <button type="submit">Subscribe</button>
+              </form>
+            </div>
+          </section>
+          <section class="Partners">
+            <div>
+              <h2>Partners</h2>
+              <p>
+                Most calendars are designed for teams. Slate is designed for
+                freelancers
+              </p>
+            </div>
+            <ul>
+              <li>
+                <a href="#">
+                  <img src="img/google.jpg" alt="google logo" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/amazon.jpg" alt="amazon logo" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/microsoft.jpg" alt="microsoft logo" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/uber.jpg" alt="uber logo" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/dropbox.jpg" alt="dropbox logo" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/google.jpg" alt="google logo" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/uber.jpg" alt="uber logo" />
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="img/amazon.jpg" alt="amazon logo" />
+                </a>
+              </li>
+            </ul>
+            <button type="button">
+              Try for free
+            </button>
+          </section>
+          <section class="Testimonials">
+            <div>
+              <h2>Testimonials</h2>
+              <img src="img/ibm.png" alt="ibm logo" width="150" />
+              <p>
+                Most calendars are designed for teams. Slate is designed for
+                freelancers who want a simple way to plan their schedule.
+              </p>
+              <div>
+                <img src="img/man-in-hat.png" alt="man-in-hat icon" />
+                <div>
+                  <p>Organize across</p>
+                  <p>Ui designer</p>
+                </div>
+              </div>
+            </div>
+            <button type="button">
+              More Testimonials
+            </button>
+          </section>
+          <section class="Pricing">
+            <div>
+              <h2>Pricing</h2>
+              <p>
+                Most calendars are designed for teams. Slate is designed for
+                freelancers
+              </p>
+              <ul>
+                <li>
+                  <span>Free</span>
+                  <p>Organize across all apps by hand</p>
+                  <div>
+                    <p>0</p>
+                    <div>
+                      <p>&dollar;</p>
+                      <p>per month</p>
+                    </div>
+                  </div>
+                  <ul>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                  </ul>
+                  <button type="button">Order now</button>
+                </li>
+                <li>
+                  <span>Standart</span>
+                  <p>Organize across all apps by hand</p>
+                  <div>
+                    <p>0</p>
+                    <div>
+                      <p>&dollar;</p>
+                      <p>per month</p>
+                    </div>
+                  </div>
+                  <ul>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                  </ul>
+                  <button type="button">Order now</button>
+                </li>
+                <li>
+                  <span>Business</span>
+                  <p>Organize across all apps by hand</p>
+                  <div>
+                    <p>0</p>
+                    <div>
+                      <p>&dollar;</p>
+                      <p>per month</p>
+                    </div>
+                  </div>
+                  <ul>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                    <li>Pricing Feature</li>
+                  </ul>
+                  <button type="button">Order now</button>
+                </li>
+              </ul>
+            </div>
+          </section>
+          <section class="Contacts">
+            <div>
+              <h2>Contact Us</h2>
+              <p>
+                Most calendars are designed for teams. Slate is designed for
+                freelancers
+              </p>
+              <div>
+                <form>
+                  <p>Contact us</p>
+                  <input type="text" minlength="2" placeholder="Your name" required />
+                  <input type="email" placeholder="Your email" required />
+                  <textarea placeholder="Your Message" rows="9"></textarea>
+                  <div><button type="submit">Send</button></div>
+                </form>
+                <div>
+                  <div>
+                    <ul>
+                      <li>
+                        <a href="https://www.google.com/maps">
+                          <svg viewBox="0 0 100 100" width="26" height="32">
+                            <use xlink:href="./img/icons.svg#icon-location"></use>
+                          </svg>
+                          6386 Spring St undefined Anchorage, Georgia 12473 United
+                          States
+                        </a>
+                      </li>
+                      <li>
+                        <a href="tel:(843)555-0130"><svg viewBox="0 0 100 100" width="27" height="22">
+                            <use xlink:href="./img/icons.svg#icon-phone"></use>
+                          </svg>
+                          (843) 555-0130
+                        </a>
+                      </li>
+                      <li>
+                        <a href="mailto:willie.jennings@example.com"><svg viewBox="0 0 100 100" width="26" height="32">
+                            <use xlink:href="./img/icons.svg#icon-mail"></use>
+                          </svg>willie.jennings@example.com</a>
+                      </li>
+                    </ul>
+                    <img src="img/map.jpg" alt="map" />
+                  </div>
+                  <ul>
+                    <li>
+                      <a href="#">
+                        <svg viewBox="0 0 100 100" width="41" height="41">
+                          <use xlink:href="./img/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg viewBox="0 0 100 100" width="41" height="41">
+                          <use xlink:href="./img/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg viewBox="0 0 100 100" width="41" height="41">
+                          <use xlink:href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </section>
 
     </main>
     <footer>
-
-    </footer>
+        <section>
+          <h2>footer</h2>
+          <div>
+            <div>
+              <p>Pages</p>
+              <ul>
+                <li>Home</li>
+                <li>Product</li>
+                <li>Pricing</li>
+                <li>About</li>
+                <li>Contact</li>
+              </ul>
+            </div>
+            <div>
+              <p>Tomothy</p>
+              <ul>
+                <li>Eleanor Edwards</li>
+                <li>Ted Robertson</li>
+                <li>Annette Russell</li>
+                <li>Jennie Mckinney</li>
+                <li>Gloria Richards</li>
+              </ul>
+            </div>
+            <div>
+              <p>Jane Black</p>
+              <ul>
+                <li>Philip Jones</li>
+                <li>Product</li>
+                <li>Colleen Russell</li>
+                <li>Marvin Hawkins</li>
+                <li>Bruce Simmmons</li>
+              </ul>
+            </div>
+            <div>
+              <ul>
+                <li>
+                  <a href="https://www.google.com/maps">
+                    <svg viewBox="0 0 100 100" width="46" height="46">
+                      <use xlink:href="./img/icons.svg#icon-location"></use>
+                    </svg>
+                    7480 Mockingbird Hill undefined
+                  </a>
+                </li>
+                <li>
+                  <a href="tel:(239)555-0108"><svg viewBox="0 0 100 100" width="35" height="35">
+                      <use xlink:href="./img/icons.svg#icon-phone"></use>
+                    </svg>
+                    (239) 555-0108
+                  </a>
+                </li>
+                <li>
+                  <ul>
+                    <li>
+                      <a href="#">
+                        <svg viewBox="0 0 100 100" width="41" height="41">
+                          <use xlink:href="./img/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg viewBox="0 0 100 100" width="41" height="41">
+                          <use xlink:href="./img/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <svg viewBox="0 0 100 100" width="41" height="41">
+                          <use xlink:href="./img/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+      </footer>
 </body>
 </html>
